Remove warnings (#153)
Remove all current (and future) warnings.