@@ -29,7 +29,8 @@ import com.ibm.wala.util.NullProgressMonitor;
 import com.ibm.wala.util.collections.HashSetFactory;
 import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -108,9 +109,9 @@ public abstract class TestPythonMLCallGraphShape extends TestJythonCallGraphShap
   }
 
   protected void checkTensorOps(String url, CheckTensorOps check)
-      throws IllegalArgumentException, CancelException, IOException {
+      throws IllegalArgumentException, CancelException, IOException, URISyntaxException {
     PythonTensorAnalysisEngine e = new PythonTensorAnalysisEngine();
-    e.setModuleFiles(Collections.singleton(new SourceURLModule(new URL(url))));
+    e.setModuleFiles(Collections.singleton(new SourceURLModule(new URI(url).toURL())));
     PropagationCallGraphBuilder cgBuilder =
         (PropagationCallGraphBuilder) e.defaultCallGraphBuilder();
     CallGraph CG = cgBuilder.makeCallGraph(cgBuilder.getOptions());
